--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -55,7 +55,7 @@ spring:
       max-request-size: 1000MB
   sql:
     init:
-      mode: never
+      mode: always
       continue-on-error: false
       schema-locations: classpath:/data/schema.sql
       data-locations: classpath:/data/data.sql
