Implement working JWT authentication

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -66,6 +66,7 @@ server:
     whitelabel:
       enabled: false
 
-jwt:
-  expiration: ${JWT_EXPIRATION}
-  secret: ${JWT_SECRET}
+security:
+  jwt:
+    expiration-time: ${JWT_EXPIRATION}
+    secret-key: ${JWT_SECRET}
